# SPEC-Zero-Trust-Secret-Orchestration

./: README.md  SPEC.md
.claude/skills/zero-trust-secret-orchestration/: .gitignore  SKILL.md  audit.md  audit.sh
.claude/skills/zero-trust-secret-orchestration/examples/: README.md
.claude/skills/zero-trust-secret-orchestration/examples/api/: 01-fastify-route.md  02-fastapi-route.md  README.md
.claude/skills/zero-trust-secret-orchestration/examples/cli/: 01-secret-get.md  02-secret-audit.md  README.md
.claude/skills/zero-trust-secret-orchestration/examples/sdk/: 01-local-fallback.md  02-production-fallback.md  README.md
.claude/skills/zero-trust-secret-orchestration/references/: README.md
.claude/skills/zero-trust-secret-orchestration/references/mjs/: Makefile  README.md  package-lock.json  package.json
.claude/skills/zero-trust-secret-orchestration/references/mjs/src/: fastify-plugin.mjs  harness.mjs  index.mjs  resolver.mjs  strategy.mjs
.claude/skills/zero-trust-secret-orchestration/references/py/: Makefile  README.md  pyproject.toml
.claude/skills/zero-trust-secret-orchestration/references/py/src/zts/: __init__.py  fastapi_adapter.py  harness.py  resolver.py  strategy.py
.claude/skills/zero-trust-secret-orchestration/references/py/src/zts/strategies/: cloud.py  keychain_biometric.py  system_env.py
.claude/skills/zero-trust-secret-orchestration/references/py/tests/: test_harness_timeout.py  test_keychain_biometric.py  test_system_env.py
.claude/skills/zero-trust-secret-orchestration/scripts/: audit-self-test.sh  parity-harness.sh
(+7 files in other folders)
